--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,86 @@
 <div class="out">
 	<!-- top -->
 	<section class="top">
-		//=include partials/header-home.html  
-	</section> 
+		//=include partials/header-home.html 
+		<div class="top__in">
+			<h3 class="title-middle">ТВОЯ ДОСТУПНАЯ ШКОЛА АНГЛИЙСКОГО ЯЗЫКА!</h3>
+			<a href="#price" class="mouse">
+				<span class="icon icon-mouse"></span>
+				<span class="mouse__text">ПРОКРУТИ</span>
+			</a>
+		</div>
+	</section>
+	<!-- bg -->
+	<section class="bg" style="background-image: url(../img/bg1.png);"></section>
+	<!-- price -->
+	<section class="price" id="price">
+		<div class="price__in">
+			<h3 class="title">ЛУЧШАЯ <br>ЦЕНА</h3>
+			<!-- wrap -->
+			<div class="price__wrap">
+				<div class="price__text">За стэп (3 месяца):</div>
+				<div class="price__row">
+					<div class="time-day">Утро</div>
+					<div class="time">(с 9:00 до 13:00)</div>
+					<div class="cost"><span>900</span>грн</div>
+				</div>
+				<div class="price__row">
+					<div class="time-day">День</div>
+					<div class="time">(с 13:00 до 20:00)</div>
+					<div class="cost"><span>1200</span>грн</div>
+				</div>
+				<div class="price__btn">
+					<a href="#" class="btn btn_red">ЗАПИСАТЬСЯ НА ТЕСТ</a>
+				</div>
+				<div class="price__foot">
+					<p>Всего 300 грн/месяц!</p>
+					<p>Мы не шутим! Мы лоу-кост!</p>
+				</div>
+			</div>
+		</div>
+		<!-- circle -->
+		<div class="circle"><span></span></div>
+	</section>
+	<!-- course -->
+	<section class="course">
+		<div class="course__in">
+			<h3 class="title">ИНТЕНСИВНЫЙ <br>КУРС</h3>
+			<!-- wrap -->
+			<div class="wrap">
+				<div class="row">
+					<div class="col">Полный <br>курс</div>
+					<div class="col">это 4 уровня (степа), пройдя которые ты заговоришь на английском! Обучение займет всего один год!</div>
+				</div>
+				<div class="row">
+					<div class="col">Степ</div>
+					<div class="col">это 3 месяца активного обучения дома и в группе (12 человек).</div>
+				</div>
+				<div class="row">
+					<div class="col">Трек</div>
+					<div class="col">это 1 месяц в составе степа. Ты можешь начать заниматся именно с того трека который тебе действительно необходим!</div>
+				</div>
+			</div>
+			<h3 class="title-small">Весь английский за один год!</h3>
+			<!-- steps -->
+			<div class="steps">
+				<div class="steps__item">
+					<div class="steps__text">Степ</div>
+				</div>
+				<div class="steps__item">
+					<div class="steps__text">Степ</div>
+				</div>
+				<div class="steps__item is-bot">
+					<div class="steps__text">Степ</div>
+				</div>
+				<div class="steps__item is-bot">
+					<div class="steps__text">Степ</div>
+				</div>
+				<div class="steps__circle"></div>
+			</div>
+		</div>
+	</section>
+	<!-- bg -->
+	<section class="bg" style="background-image: url(../img/bg2.png);"></section>
 </div>
 <!-- END out-->
 </body>
