--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 		</div>
 	</section>
 	<!-- picture -->
-	<section class="picture" style="background-image: url(../img/bg1.png);">
+	<section class="picture" style="background-image: url(img/bg1.png);">
 		<div class="picture__in">
 			<h3 class="title-big">100</h3>
 			<p>БЕСПЛАТНЫХ МЕСТ!</p>
@@ -34,12 +34,12 @@
 				<div class="price__text">За стэп (3 месяца):</div>
 				<div class="price__row">
 					<div class="time-day">Утро</div>
-					<div class="time">(с 9:00 до 13:00)</div>
+					<div class="time">с 9:00 до 13:00</div>
 					<div class="cost"><span>900</span> грн</div>
 				</div>
 				<div class="price__row">
 					<div class="time-day">День</div>
-					<div class="time">(с 13:00 до 20:00)</div>
+					<div class="time">с 13:00 до 20:00</div>
 					<div class="cost"><span>1200</span> грн</div>
 				</div>
 				<div class="price__btn">
@@ -76,24 +76,12 @@
 			<h3 class="title-small">Весь английский за один год!</h3>
 			<!-- steps -->
 			<div class="steps">
-				<div class="steps__item">
-					<div class="steps__text">Степ</div>
-				</div>
-				<div class="steps__item">
-					<div class="steps__text">Степ</div>
-				</div>
-				<div class="steps__item is-bot">
-					<div class="steps__text">Степ</div>
-				</div>
-				<div class="steps__item is-bot">
-					<div class="steps__text">Степ</div>
-				</div>
-				<div class="steps__circle"></div>
+				<img src="img/svg/steps.svg" alt="img">
 			</div>
 		</div>
 	</section>
 	<!-- picture -->
-	<section class="picture" style="background-image: url(../img/bg2.png);">
+	<section class="picture" style="background-image: url(img/bg2.png);">
 		<div class="picture__in">
 			<p>ОТКРЫТИЕ <br>ШКОЛЫ </p>
 			<div class="title-big">10 МАРТА</div>
