--- a/src/index.html
+++ b/src/index.html
@@ -1,132 +1,133 @@
 //=include partials/head.html  
 <body>
 <!-- paralax -->
-<div class="paralax js-paralax">
-	<svg class="paralax__item" version="1.1"
-		 xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
-		 x="0px" y="0px" width="318px" height="3836.3px" viewBox="0 0 318 3836.3" style="enable-background:new 0 0 318 3836.3;"
-		 xml:space="preserve">
-		<style type="text/css">
-			.st0{opacity:0.6;}
-			.st1{fill:#FFFFFF;}
-			.st2{opacity:0.1;}
-		</style>
-		<defs>
-		</defs>
-		<g class="st0">
-			<path class="st1" d="M144.3,803.3l-24.5-44.7l44.7-24.5l24.5,44.7L144.3,803.3z M126.6,760.5l19.7,36l36-19.7l-19.7-36L126.6,760.5
-				z"/>
-		</g>
-		<g class="st0">
-			<path class="st1" d="M226.9,885.9v-55l49.1,28L226.9,885.9z M231.9,839.5v38l33.9-18.7L231.9,839.5z"/>
-		</g>
-		<g class="st0">
-			<path class="st1" d="M67.8,954c-10.5,0-19-8.5-19-19s8.5-19,19-19s19,8.5,19,19S78.3,954,67.8,954z M67.8,920.5
-				c-8,0-14.5,6.5-14.5,14.5s6.5,14.5,14.5,14.5S82.3,943,82.3,935S75.8,920.5,67.8,920.5z"/>
-		</g>
-		<g class="st0">
-			<path class="st1" d="M303.8,1149.3c-7.9,0-14.2-6.4-14.2-14.2s6.4-14.2,14.2-14.2s14.2,6.4,14.2,14.2S311.7,1149.3,303.8,1149.3z
-				 M303.8,1125.8c-5.1,0-9.2,4.1-9.2,9.2s4.1,9.2,9.2,9.2s9.2-4.1,9.2-9.2S308.9,1125.8,303.8,1125.8z"/>
-		</g>
-		<g class="st0">
-			<path class="st1" d="M206.8,586.3c-7.9,0-14.2-6.4-14.2-14.2s6.4-14.2,14.2-14.2S221,564.2,221,572S214.7,586.3,206.8,586.3z
-				 M206.8,562.8c-5.1,0-9.2,4.1-9.2,9.2s4.1,9.2,9.2,9.2s9.2-4.1,9.2-9.2S211.9,562.8,206.8,562.8z"/>
-		</g>
-		<g class="st0">
-			<path class="st1" d="M117.1,1043.1l-21.4-26.9l19-28.7l33.1,9.2l1.5,34.4L117.1,1043.1z M100.7,1016l17.7,22.3l26.7-10l-1.2-28.5
-				l-27.5-7.6L100.7,1016z"/>
-		</g>
-		<g class="st2">
-			<path class="st1" d="M96.9,1482.1l-19.9-47l47-19.9l19.9,47L96.9,1482.1z M83.6,1437.8l16,37.8l37.8-16l-16-37.8L83.6,1437.8z"/>
-		</g>
-		<g class="st2">
-			<path class="st1" d="M191.9,1302.9v-55l49.1,28L191.9,1302.9z M196.9,1256.5v38l33.9-18.7L196.9,1256.5z"/>
-		</g>
-		<g class="st2">
-			<path class="st1" d="M73.9,2261.9v-34l30.4,17.3L73.9,2261.9z M78.9,2236.5v17l15.1-8.3L78.9,2236.5z"/>
-		</g>
-		<g class="st2">
-			<path class="st1" d="M134.3,2157.3c-16.4,0-29.7-13.3-29.7-29.7s13.3-29.7,29.7-29.7s29.7,13.3,29.7,29.7
-				S150.7,2157.3,134.3,2157.3z M134.3,2102.8c-13.6,0-24.7,11.1-24.7,24.7s11.1,24.7,24.7,24.7s24.7-11.1,24.7-24.7
-				S147.9,2102.8,134.3,2102.8z"/>
-		</g>
-		<g class="st2">
-			<path class="st1" d="M245.8,1967.3c-7.9,0-14.2-6.4-14.2-14.2s6.4-14.2,14.2-14.2c7.9,0,14.2,6.4,14.2,14.2
-				S253.7,1967.3,245.8,1967.3z M245.8,1943.8c-5.1,0-9.2,4.1-9.2,9.2s4.1,9.2,9.2,9.2c5.1,0,9.2-4.1,9.2-9.2
-				S250.9,1943.8,245.8,1943.8z"/>
-		</g>
-		<g class="st2">
-			
-				<rect x="34.8" y="1972.9" transform="matrix(0.5547 -0.832 0.832 0.5547 -1645.2166 920.4199)" class="st1" width="5" height="48.7"/>
-		</g>
-		<g class="st2">
-			<path class="st1" d="M106.8,1748l-26.5-33.4l23.6-35.5l41.1,11.4l1.8,42.6L106.8,1748z M86.4,1714.4l22,27.7l33.1-12.4l-1.5-35.3
-				l-34.1-9.5L86.4,1714.4z"/>
-		</g>
-		<g class="st0">
-			<path class="st1" d="M19.9,2603.1l-19.9-47l47-19.9l19.9,47L19.9,2603.1z M6.6,2558.8l16,37.8l37.8-16l-16-37.8L6.6,2558.8z"/>
-		</g>
-		<g class="st0">
-			<path class="st1" d="M147.9,2657.9v-55l49.1,28L147.9,2657.9z M152.9,2611.5v38l33.9-18.7L152.9,2611.5z"/>
-		</g>
-		<g class="st0">
-			<path class="st1" d="M213.8,2415.3c-11.7,0-21.2-9.5-21.2-21.2s9.5-21.2,21.2-21.2s21.2,9.5,21.2,21.2S225.5,2415.3,213.8,2415.3z
-				 M213.8,2377.8c-9,0-16.2,7.3-16.2,16.2s7.3,16.2,16.2,16.2S230,2403,230,2394S222.8,2377.8,213.8,2377.8z"/>
-		</g>
-		<g class="st0">
-			<path class="st1" d="M212.8,2962.3c-7.9,0-14.2-6.4-14.2-14.2s6.4-14.2,14.2-14.2s14.2,6.4,14.2,14.2S220.7,2962.3,212.8,2962.3z
-				 M212.8,2938.8c-5.1,0-9.2,4.1-9.2,9.2s4.1,9.2,9.2,9.2s9.2-4.1,9.2-9.2S217.9,2938.8,212.8,2938.8z"/>
-		</g>
-		<g class="st0">
-			<path class="st1" d="M62.8,2897l-26.5-33.4l23.6-35.5l41.1,11.4l1.8,42.6L62.8,2897z M42.4,2863.4l22,27.7l33.1-12.4l-1.5-35.3
-				l-34.1-9.5L42.4,2863.4z"/>
-		</g>
-		<g class="st2">
-			<path class="st1" d="M19.9,3452.1l-19.9-47l47-19.9l19.9,47L19.9,3452.1z M6.6,3407.8l16,37.8l37.8-16l-16-37.8L6.6,3407.8z"/>
-		</g>
-		<g class="st2">
-			<path class="st1" d="M150.9,3524.9v-55l49.1,28L150.9,3524.9z M155.9,3478.5v38l33.9-18.7L155.9,3478.5z"/>
-		</g>
-		<g class="st2">
-			<path class="st1" d="M213.8,3264.3c-11.7,0-21.2-9.5-21.2-21.2s9.5-21.2,21.2-21.2s21.2,9.5,21.2,21.2S225.5,3264.3,213.8,3264.3z
-				 M213.8,3226.8c-9,0-16.2,7.3-16.2,16.2s7.3,16.2,16.2,16.2S230,3252,230,3243S222.8,3226.8,213.8,3226.8z"/>
-		</g>
-		<g class="st2">
-			<path class="st1" d="M205.8,3836.3c-7.9,0-14.2-6.4-14.2-14.2s6.4-14.2,14.2-14.2s14.2,6.4,14.2,14.2S213.7,3836.3,205.8,3836.3z
-				 M205.8,3812.8c-5.1,0-9.2,4.1-9.2,9.2s4.1,9.2,9.2,9.2s9.2-4.1,9.2-9.2S210.9,3812.8,205.8,3812.8z"/>
-		</g>
-		<g class="st2">
-			<path class="st1" d="M62.8,3746l-26.5-33.4l23.6-35.5l41.1,11.4l1.8,42.6L62.8,3746z M42.4,3712.4l22,27.7l33.1-12.4l-1.5-35.3
-				l-34.1-9.5L42.4,3712.4z"/>
-		</g>
-		<g class="st0">
-			<path class="st1" d="M268,181.1l-16.8-26.9l26.9-16.8l16.8,26.9L268,181.1z M258,155.7l11.5,18.5l18.5-11.5l-11.5-18.5L258,155.7z"
-				/>
-		</g>
-		<g class="st0">
-			<path class="st1" d="M136.1,279.9l-37.9-2.5l2.5-37.9l37.9,2.5L136.1,279.9z M103.5,272.7l27.9,1.9l1.9-27.9l-27.9-1.9L103.5,272.7
-				z"/>
-		</g>
-		<g class="st0">
-			<path class="st1" d="M278.6,23.6c-0.9,0-1.8-0.1-2.7-0.3l0,0c-6.4-1.5-10.3-7.8-8.9-14.2c1.5-6.4,7.8-10.3,14.2-8.9
-				c3.1,0.7,5.7,2.6,7.4,5.3c1.7,2.7,2.2,5.8,1.5,8.9c-0.7,3.1-2.6,5.7-5.2,7.4C283,23,280.8,23.6,278.6,23.6z M277.1,18.5
-				c1.8,0.4,3.6,0.1,5.1-0.9c1.5-1,2.6-2.5,3-4.3c0.4-1.8,0.1-3.6-0.9-5.1c-1-1.5-2.5-2.6-4.2-3c-3.7-0.8-7.3,1.4-8.2,5.1
-				C271.1,14,273.4,17.6,277.1,18.5L277.1,18.5z"/>
-		</g>
-		<g class="st0">
-			<path class="st1" d="M229.8,411.3c-7.9,0-14.2-6.4-14.2-14.2s6.4-14.2,14.2-14.2S244,389.2,244,397S237.7,411.3,229.8,411.3z
-				 M229.8,387.8c-5.1,0-9.2,4.1-9.2,9.2s4.1,9.2,9.2,9.2s9.2-4.1,9.2-9.2S234.9,387.8,229.8,387.8z"/>
-		</g>
-		<g class="st0">
-			
-				<rect x="54.8" y="299.9" transform="matrix(0.5547 -0.8321 0.8321 0.5547 -244.297 192.0847)" class="st1" width="5" height="48.7"/>
-		</g>
-		<g class="st0">
-			<path class="st1" d="M79.8,112.7L49.7,94.2l8.3-34.3l35.2-2.8l13.5,32.6L79.8,112.7z M55.4,91.9l23.9,14.7l21.3-18.2L89.9,62.4
-				l-28,2.2L55.4,91.9z"/>
-		</g>
-	</svg>
-
+<div class="paralax">
+	<div class="paralax__left js-paralax">
+		<svg class="paralax__svg" version="1.1"
+			 xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
+			 x="0px" y="0px" width="318px" height="3836.3px" viewBox="0 0 318 3836.3" style="enable-background:new 0 0 318 3836.3;"
+			 xml:space="preserve">
+			<style type="text/css">
+				.st0{opacity:0.6;}
+				.st1{fill:#FFFFFF;}
+				.st2{opacity:0.6;}
+			</style>
+			<defs>
+			</defs>
+			<g class="st0">
+				<path class="st1" d="M144.3,803.3l-24.5-44.7l44.7-24.5l24.5,44.7L144.3,803.3z M126.6,760.5l19.7,36l36-19.7l-19.7-36L126.6,760.5
+					z"/>
+			</g>
+			<g class="st0">
+				<path class="st1" d="M226.9,885.9v-55l49.1,28L226.9,885.9z M231.9,839.5v38l33.9-18.7L231.9,839.5z"/>
+			</g>
+			<g class="st0">
+				<path class="st1" d="M67.8,954c-10.5,0-19-8.5-19-19s8.5-19,19-19s19,8.5,19,19S78.3,954,67.8,954z M67.8,920.5
+					c-8,0-14.5,6.5-14.5,14.5s6.5,14.5,14.5,14.5S82.3,943,82.3,935S75.8,920.5,67.8,920.5z"/>
+			</g>
+			<g class="st0">
+				<path class="st1" d="M303.8,1149.3c-7.9,0-14.2-6.4-14.2-14.2s6.4-14.2,14.2-14.2s14.2,6.4,14.2,14.2S311.7,1149.3,303.8,1149.3z
+					 M303.8,1125.8c-5.1,0-9.2,4.1-9.2,9.2s4.1,9.2,9.2,9.2s9.2-4.1,9.2-9.2S308.9,1125.8,303.8,1125.8z"/>
+			</g>
+			<g class="st0">
+				<path class="st1" d="M206.8,586.3c-7.9,0-14.2-6.4-14.2-14.2s6.4-14.2,14.2-14.2S221,564.2,221,572S214.7,586.3,206.8,586.3z
+					 M206.8,562.8c-5.1,0-9.2,4.1-9.2,9.2s4.1,9.2,9.2,9.2s9.2-4.1,9.2-9.2S211.9,562.8,206.8,562.8z"/>
+			</g>
+			<g class="st0">
+				<path class="st1" d="M117.1,1043.1l-21.4-26.9l19-28.7l33.1,9.2l1.5,34.4L117.1,1043.1z M100.7,1016l17.7,22.3l26.7-10l-1.2-28.5
+					l-27.5-7.6L100.7,1016z"/>
+			</g>
+			<g class="st2">
+				<path class="st1" d="M96.9,1482.1l-19.9-47l47-19.9l19.9,47L96.9,1482.1z M83.6,1437.8l16,37.8l37.8-16l-16-37.8L83.6,1437.8z"/>
+			</g>
+			<g class="st2">
+				<path class="st1" d="M191.9,1302.9v-55l49.1,28L191.9,1302.9z M196.9,1256.5v38l33.9-18.7L196.9,1256.5z"/>
+			</g>
+			<g class="st2">
+				<path class="st1" d="M73.9,2261.9v-34l30.4,17.3L73.9,2261.9z M78.9,2236.5v17l15.1-8.3L78.9,2236.5z"/>
+			</g>
+			<g class="st2">
+				<path class="st1" d="M134.3,2157.3c-16.4,0-29.7-13.3-29.7-29.7s13.3-29.7,29.7-29.7s29.7,13.3,29.7,29.7
+					S150.7,2157.3,134.3,2157.3z M134.3,2102.8c-13.6,0-24.7,11.1-24.7,24.7s11.1,24.7,24.7,24.7s24.7-11.1,24.7-24.7
+					S147.9,2102.8,134.3,2102.8z"/>
+			</g>
+			<g class="st2">
+				<path class="st1" d="M245.8,1967.3c-7.9,0-14.2-6.4-14.2-14.2s6.4-14.2,14.2-14.2c7.9,0,14.2,6.4,14.2,14.2
+					S253.7,1967.3,245.8,1967.3z M245.8,1943.8c-5.1,0-9.2,4.1-9.2,9.2s4.1,9.2,9.2,9.2c5.1,0,9.2-4.1,9.2-9.2
+					S250.9,1943.8,245.8,1943.8z"/>
+			</g>
+			<g class="st2">
+				
+					<rect x="34.8" y="1972.9" transform="matrix(0.5547 -0.832 0.832 0.5547 -1645.2166 920.4199)" class="st1" width="5" height="48.7"/>
+			</g>
+			<g class="st2">
+				<path class="st1" d="M106.8,1748l-26.5-33.4l23.6-35.5l41.1,11.4l1.8,42.6L106.8,1748z M86.4,1714.4l22,27.7l33.1-12.4l-1.5-35.3
+					l-34.1-9.5L86.4,1714.4z"/>
+			</g>
+			<g class="st0">
+				<path class="st1" d="M19.9,2603.1l-19.9-47l47-19.9l19.9,47L19.9,2603.1z M6.6,2558.8l16,37.8l37.8-16l-16-37.8L6.6,2558.8z"/>
+			</g>
+			<g class="st0">
+				<path class="st1" d="M147.9,2657.9v-55l49.1,28L147.9,2657.9z M152.9,2611.5v38l33.9-18.7L152.9,2611.5z"/>
+			</g>
+			<g class="st0">
+				<path class="st1" d="M213.8,2415.3c-11.7,0-21.2-9.5-21.2-21.2s9.5-21.2,21.2-21.2s21.2,9.5,21.2,21.2S225.5,2415.3,213.8,2415.3z
+					 M213.8,2377.8c-9,0-16.2,7.3-16.2,16.2s7.3,16.2,16.2,16.2S230,2403,230,2394S222.8,2377.8,213.8,2377.8z"/>
+			</g>
+			<g class="st0">
+				<path class="st1" d="M212.8,2962.3c-7.9,0-14.2-6.4-14.2-14.2s6.4-14.2,14.2-14.2s14.2,6.4,14.2,14.2S220.7,2962.3,212.8,2962.3z
+					 M212.8,2938.8c-5.1,0-9.2,4.1-9.2,9.2s4.1,9.2,9.2,9.2s9.2-4.1,9.2-9.2S217.9,2938.8,212.8,2938.8z"/>
+			</g>
+			<g class="st0">
+				<path class="st1" d="M62.8,2897l-26.5-33.4l23.6-35.5l41.1,11.4l1.8,42.6L62.8,2897z M42.4,2863.4l22,27.7l33.1-12.4l-1.5-35.3
+					l-34.1-9.5L42.4,2863.4z"/>
+			</g>
+			<g class="st2">
+				<path class="st1" d="M19.9,3452.1l-19.9-47l47-19.9l19.9,47L19.9,3452.1z M6.6,3407.8l16,37.8l37.8-16l-16-37.8L6.6,3407.8z"/>
+			</g> 
+			<g class="st2">
+				<path class="st1" d="M150.9,3524.9v-55l49.1,28L150.9,3524.9z M155.9,3478.5v38l33.9-18.7L155.9,3478.5z"/>
+			</g>
+			<g class="st2">
+				<path class="st1" d="M213.8,3264.3c-11.7,0-21.2-9.5-21.2-21.2s9.5-21.2,21.2-21.2s21.2,9.5,21.2,21.2S225.5,3264.3,213.8,3264.3z
+					 M213.8,3226.8c-9,0-16.2,7.3-16.2,16.2s7.3,16.2,16.2,16.2S230,3252,230,3243S222.8,3226.8,213.8,3226.8z"/>
+			</g>
+			<g class="st2">
+				<path class="st1" d="M205.8,3836.3c-7.9,0-14.2-6.4-14.2-14.2s6.4-14.2,14.2-14.2s14.2,6.4,14.2,14.2S213.7,3836.3,205.8,3836.3z
+					 M205.8,3812.8c-5.1,0-9.2,4.1-9.2,9.2s4.1,9.2,9.2,9.2s9.2-4.1,9.2-9.2S210.9,3812.8,205.8,3812.8z"/>
+			</g>
+			<g class="st2">
+				<path class="st1" d="M62.8,3746l-26.5-33.4l23.6-35.5l41.1,11.4l1.8,42.6L62.8,3746z M42.4,3712.4l22,27.7l33.1-12.4l-1.5-35.3
+					l-34.1-9.5L42.4,3712.4z"/>
+			</g>
+			<g class="st0">
+				<path class="st1" d="M268,181.1l-16.8-26.9l26.9-16.8l16.8,26.9L268,181.1z M258,155.7l11.5,18.5l18.5-11.5l-11.5-18.5L258,155.7z"
+					/>
+			</g>
+			<g class="st0">
+				<path class="st1" d="M136.1,279.9l-37.9-2.5l2.5-37.9l37.9,2.5L136.1,279.9z M103.5,272.7l27.9,1.9l1.9-27.9l-27.9-1.9L103.5,272.7
+					z"/>
+			</g>
+			<g class="st0">
+				<path class="st1" d="M278.6,23.6c-0.9,0-1.8-0.1-2.7-0.3l0,0c-6.4-1.5-10.3-7.8-8.9-14.2c1.5-6.4,7.8-10.3,14.2-8.9
+					c3.1,0.7,5.7,2.6,7.4,5.3c1.7,2.7,2.2,5.8,1.5,8.9c-0.7,3.1-2.6,5.7-5.2,7.4C283,23,280.8,23.6,278.6,23.6z M277.1,18.5
+					c1.8,0.4,3.6,0.1,5.1-0.9c1.5-1,2.6-2.5,3-4.3c0.4-1.8,0.1-3.6-0.9-5.1c-1-1.5-2.5-2.6-4.2-3c-3.7-0.8-7.3,1.4-8.2,5.1
+					C271.1,14,273.4,17.6,277.1,18.5L277.1,18.5z"/>
+			</g>
+			<g class="st0">
+				<path class="st1" d="M229.8,411.3c-7.9,0-14.2-6.4-14.2-14.2s6.4-14.2,14.2-14.2S244,389.2,244,397S237.7,411.3,229.8,411.3z
+					 M229.8,387.8c-5.1,0-9.2,4.1-9.2,9.2s4.1,9.2,9.2,9.2s9.2-4.1,9.2-9.2S234.9,387.8,229.8,387.8z"/>
+			</g>
+			<g class="st0">
+				
+					<rect x="54.8" y="299.9" transform="matrix(0.5547 -0.8321 0.8321 0.5547 -244.297 192.0847)" class="st1" width="5" height="48.7"/>
+			</g>
+			<g class="st0">
+				<path class="st1" d="M79.8,112.7L49.7,94.2l8.3-34.3l35.2-2.8l13.5,32.6L79.8,112.7z M55.4,91.9l23.9,14.7l21.3-18.2L89.9,62.4
+					l-28,2.2L55.4,91.9z"/>
+			</g>
+		</svg>
+	</div>
 </div>
 <!-- BEGIN  out-->
 <div class="out">
