--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,9 @@
 			 x="0px" y="0px" width="318px" height="3836.3px" viewBox="0 0 318 3836.3" style="enable-background:new 0 0 318 3836.3;"
 			 xml:space="preserve">
 			<style type="text/css">
-				.st0{opacity:0.6;}
+				.st0{opacity:0.3;}
 				.st1{fill:#FFFFFF;}
-				.st2{opacity:0.6;}
+				.st2{opacity:0.3;}
 			</style>
 			<defs>
 			</defs>
@@ -132,7 +132,7 @@
 <!-- BEGIN  out-->
 <div class="out">
 	<!-- top -->
-	<section class="top">
+	<section class="top js-top">
 		//=include partials/header-home.html 
 		<div class="top__in">
 			<h3 class="title-middle">ТВОЯ ДОСТУПНАЯ ШКОЛА АНГЛИЙСКОГО ЯЗЫКА!</h3>
