--- a/src/authorization-error.html
+++ b/src/authorization-error.html
@@ -257,7 +257,7 @@
 <div class="out">
 	<!-- top -->
 	<section class="top js-top">
-		//=include partials/header-home.html 
+		//=include partials/header-home-lod-error.html 
 		<div class="top__in">
 			<h1>ТВОЯ ДОСТУПНАЯ ШКОЛА АНГЛИЙСКОГО ЯЗЫКА!</h1>
 			<!-- video -->
@@ -270,7 +270,7 @@
 					<div class="popup__in">
 						<button class="popup__close js-popup-close"><i class="icon icon-close"></i></button>
 						<div class="popup__wrap">
-							<div class="js-video-frame" data-link="https://www.youtube.com/embed/mwxb_0g8-hY">
+							<div class="js-video-farme" data-link="https://www.youtube.com/embed/mwxb_0g8-hY">
 								<iframe width="100%" height="480" src="" frameborder="0" allowfullscreen></iframe>
 							</div>
 						</div>
