--- a/src/teacher.html
+++ b/src/teacher.html
@@ -2,7 +2,7 @@
 <body>
 <!-- BEGIN  out-->
 <div class="out is-teacher">
-	//=include partials/header-home.html 
+	//=include partials/header_teacher.html 
 	<!-- center -->
 	<div class="center">
 		//=include partials/sidebar-teacher.html
