--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,9 @@
 //=include partials/head.html  
-<body>
+<body class="is-home">
 <!-- paralax -->
 //=include partials/paralax.html
 <!-- BEGIN  out-->
-<div class="out">
+<div class="out"> 
 	<!-- top -->
 	<section class="top js-top">
 		//=include partials/header-home.html 
