--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <!-- paralax -->
 //=include partials/paralax.html
 <!-- BEGIN  out-->
-<div class="out"> 
+<div class="out" id="out"> 
 	<!-- top -->
 	<section class="top js-top">
 		//=include partials/header-home.html 
@@ -39,7 +39,7 @@
 		</div>
 	</section>
 	<!-- price -->
-	<section class="price">
+	<section class="price" id="price">
 		<div class="price__in">
 			<h3 class="title">ЛУЧШАЯ <br>ЦЕНА</h3>
 			<!-- wrap -->
@@ -68,7 +68,7 @@
 		</div>
 	</section>
 	<!-- course -->
-	<section class="course">
+	<section class="course" id="course">
 		<div class="course__in">
 			<h3 class="title">ИНТЕНСИВНЫЙ <br>КУРС</h3>
 			<!-- wrap -->
@@ -101,7 +101,7 @@
 		</div>
 	</section>
 	<!-- graph -->
-	<section class="graph">
+	<section class="graph" id="graph">
 		<div class="graph__in">
 			<h3 class="title">СВОБОДНЫЙ <br>ГРАФИК</h3>
 			<!-- wrap -->
@@ -128,7 +128,7 @@
 	<!-- textbook -->
 	<section class="textbook">
 		<div class="textbook__in">
-			<div class="textbook__wrap">
+			<div class="textbook__wrap" id="textbook">
 				<h3 class="title">УНИКАЛЬНЫЙ <br>УЧЕБНИК</h3>
 				<!-- wrap -->
 				<div class="wrap">
@@ -144,7 +144,7 @@
 				<h3 class="title-small">Возьми английский с собой!</h3>
 			</div>
 			<!-- slider -->
-			<div class="slider">
+			<div class="slider" id="office">
 				<div class="slider__arr js-slider-arr"></div>
 				<div class="slider__wrap js-slider">
 					<div class="slider__slide"><img src="img/slider-img.png" alt="img"></div>
@@ -158,13 +158,13 @@
 					<p>Загляни и напиши тест!</p>
 				</div>
 				<div class="textbook__right">
-					<a href="#" class="btn btn_yellow">ЗАПИСАТЬСЯ НА ТЕСТ</a>
+					<a href="#contacts" class="btn btn_yellow js-scroll-to">ЗАПИСАТЬСЯ НА ТЕСТ</a>
 				</div>
 			</div>
 		</div>
 	</section>
 	<!-- contacts -->
-	<section class="contacts">
+	<section class="contacts" id="contacts">
 		<div class="contacts__col">
 			<!-- map -->
 			<div class="map js-map" id="map"></div>
