--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
 			<h3 class="title-big">100</h3>
 			<p>БЕСПЛАТНЫХ МЕСТ!</p>
 			<div class="picture__but">
-				<a href="#" class="btn btn_yellow">ЗАПИСАТЬСЯ НА ТЕСТ</a>
+				<a href="#contacts" class="btn btn_yellow js-scroll-to">ЗАПИСАТЬСЯ НА ТЕСТ</a>
 			</div>
 		</div>
 	</section>
@@ -56,7 +56,7 @@
 					<div class="cost"><span>1200</span> грн</div>
 				</div>
 				<div class="price__btn">
-					<a href="#" class="btn btn_red">ЗАПИСАТЬСЯ НА ТЕСТ</a>
+					<a href="#contacts" class="btn btn_red js-scroll-to">ЗАПИСАТЬСЯ НА ТЕСТ</a>
 				</div>
 				<div class="price__foot">
 					<p>Всего 300 грн/месяц!</p>
@@ -126,9 +126,10 @@
 		</div>
 	</section>
 	<!-- textbook -->
+	<div id="textbook"></div>
 	<section class="textbook">
 		<div class="textbook__in">
-			<div class="textbook__wrap" id="textbook">
+			<div class="textbook__wrap">
 				<h3 class="title">УНИКАЛЬНЫЙ <br>УЧЕБНИК</h3>
 				<!-- wrap -->
 				<div class="wrap">
@@ -141,10 +142,11 @@
 						<div class="col">Весь курс на твоем смартфоне! Тебе нужно просто скачать учебник. Делай упражнения, читай тексты и все это в твоем кармане.</div>
 					</div>
 				</div>
+				<div id="office"></div>
 				<h3 class="title-small">Возьми английский с собой!</h3>
 			</div>
 			<!-- slider -->
-			<div class="slider" id="office">
+			<div class="slider">
 				<div class="slider__arr js-slider-arr"></div>
 				<div class="slider__wrap js-slider">
 					<div class="slider__slide"><img src="img/slider-img.png" alt="img"></div>
