--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
 		</div>
 	</section>
 	<!-- price -->
-	<section class="price" id="price">
+	<section class="price js-yellow" id="price">
 		<div class="price__in">
 			<h3 class="title">ЛУЧШАЯ <br>ЦЕНА</h3>
 			<!-- wrap -->
@@ -101,7 +101,7 @@
 		</div>
 	</section>
 	<!-- graph -->
-	<section class="graph" id="graph">
+	<section class="graph js-yellow" id="graph">
 		<div class="graph__in">
 			<h3 class="title">СВОБОДНЫЙ <br>ГРАФИК</h3>
 			<!-- wrap -->
@@ -166,7 +166,7 @@
 		</div>
 	</section>
 	<!-- contacts -->
-	<section class="contacts" id="contacts">
+	<section class="contacts js-yellow" id="contacts">
 		<div class="contacts__col">
 			<!-- map -->
 			<div class="map js-map" id="map"></div>
