--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 <!-- BEGIN  out-->
 <div class="out" id="out"> 
 	<!-- top -->
-	<section class="top js-top">
+	<section class="top js-top js-yellow">
 		//=include partials/header-home.html 
 		<div class="top__in">
 			<h1>ТВОЯ ДОСТУПНАЯ ШКОЛА АНГЛИЙСКОГО ЯЗЫКА!</h1>
