all teacher desctop page

--- a/src/teacher.html
+++ b/src/teacher.html
@@ -593,6 +593,7 @@
 				</div>
 				<!-- calendar -->
 				<div class="calendar js-calendar"></div>
+				<h3 class="title-little">Консультації (25хв.)</h3>
 				<!-- table -->
 				<div class="table is-consult">
 					<div class="table__row">
