--- a/src/exit_popup.html
+++ b/src/exit_popup.html
@@ -1,43 +1,11 @@
-<!doctype html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<title>Template</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="format-detection" content="telephone=no">
-	<meta name="theme-color" content="#fff">
-	<link rel="stylesheet" media="all" href="css/style.css" >
-	<link rel="stylesheet" media="all" href="css/jquery-ui.min.css" >
-	<script src="js/app.js"></script>
-	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3"></script>
-</head>
-<body class="is-teacher">
+//=include partials/head.html 
+<body class="is-teacher is-hidden">
 <!-- BEGIN  out-->
 <div class="out">
-	<!-- sidebar -->
-	<div class="sidebar">
-		<!-- logo -->
-		<a href="#" class="logo is-teacher"></a>
-		<!-- nav -->
-		<nav class="nav">
-			<li class="is-active"><a href="#"><span>Дата</span></a></li>
-			<li><a href="#"><span>Групи</span></a></li>
-			<li><a href="#"><span>Додаткові заняття</span></a></li>
-			<li><a href="#"><span>Консультації</span></a></li>
-		</nav>
-	</div>
+	//=include partials/sidebar-teacher.html
 	<!-- rightbar -->
 	<div class="rightbar">
-		<!-- header -->
-		<header class="header">
-			<!-- logout -->
-			<div class="logout">
-				<a href="#" class="logout__link">
-					<span class="user-name">Розе`нко Влада</span>
-					<i class="icon icon-logout"></i>
-				</a>
-			</div>
-		</header>
+		//=include partials/header_teacher.html 
 		<!-- l -->
 		<div class="l"> 
 			<h3 class="title-large is-yellow">ГРУПИ</h3>
@@ -3010,18 +2978,24 @@
 		</div>
 	</div>
 </div>
-<!-- END out--> 
-<!-- footer -->
-<footer class="footer">
-	<div class="footer__in">
-		<!-- dev -->
-		<div class="dev">
-			<p>Дизайнер — Марта Гожа</p>
-			<p>Разработка —  UaMaster</p>
+<!-- popup -->
+<div class="popup js-popup is-active">
+	<div class="popup__in">
+		<button class="popup__close js-popup-close"><i class="icon icon-close"></i></button>
+		<div class="popup__form">
+			<h3 class="title-medium">Вихід <br>та безпека</h3>
+			<form action="">
+				<div class="row">
+					<button class="btn" type="submit">ВИЙТИ</button>
+				</div>
+				<div class="row">
+					<a href="#" class="btn">ЗМІНИТИ ПАРОЛЬ</a>
+				</div>
+			</form>
 		</div>
-		<!-- copy -->
-		<div class="copy">&copy; Project 12</div>
 	</div>
-</footer>
+</div>
+<!-- END out--> 
+//=include partials/footer.html 
 </body>
 </html>
