--- a/src/teacher_groups_popup.html
+++ b/src/teacher_groups_popup.html
@@ -1,43 +1,11 @@
-<!doctype html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<title>Template</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="format-detection" content="telephone=no">
-	<meta name="theme-color" content="#fff">
-	<link rel="stylesheet" media="all" href="css/style.css" >
-	<link rel="stylesheet" media="all" href="css/jquery-ui.min.css" >
-	<script src="js/app.js"></script>
-	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3"></script>
-</head>
-<body class="is-teacher">
+//=include partials/head.html 
+<body class="is-teacher is-hidden">
 <!-- BEGIN  out-->
 <div class="out">
-	<!-- sidebar -->
-	<div class="sidebar">
-		<!-- logo -->
-		<a href="#" class="logo is-teacher"></a>
-		<!-- nav -->
-		<nav class="nav">
-			<li class="is-active"><a href="#"><span>Дата</span></a></li>
-			<li><a href="#"><span>Групи</span></a></li>
-			<li><a href="#"><span>Додаткові заняття</span></a></li>
-			<li><a href="#"><span>Консультації</span></a></li>
-		</nav>
-	</div>
+	//=include partials/sidebar-teacher.html
 	<!-- rightbar -->
 	<div class="rightbar">
-		<!-- header -->
-		<header class="header">
-			<!-- logout -->
-			<div class="logout">
-				<a href="#" class="logout__link">
-					<span class="user-name">Розе`нко Влада</span>
-					<i class="icon icon-logout"></i>
-				</a>
-			</div>
-		</header>
+		//=include partials/header_teacher.html 
 		<!-- l -->
 		<div class="l"> 
 			<h3 class="title-large is-yellow">ГРУПИ</h3>
@@ -3010,18 +2978,96 @@
 		</div>
 	</div>
 </div>
-<!-- END out--> 
-<!-- footer -->
-<footer class="footer">
-	<div class="footer__in">
-		<!-- dev -->
-		<div class="dev">
-			<p>Дизайнер — Марта Гожа</p>
-			<p>Разработка —  UaMaster</p>
+<!-- popup -->
+<div class="popup js-popup is-active">
+	<div class="popup__in">
+		<button class="popup__close js-popup-close"><i class="icon icon-close"></i></button>
+		<div class="popup__indexes">
+			<div class="group-name">С4</div>
+			<div class="subgroup-name">Т1</div>
 		</div>
-		<!-- copy -->
-		<div class="copy">&copy; Project 12</div>
+		<div class="popup__progress">
+			<h3 class="title-medium">Денисенко Василь</h3>
+			<h3 class="title-petty">Успішність за степ 3</h3>
+			<table class="progress-table">
+				<tbody>
+					<tr>
+						<td>
+							<date class="date">27.10.15</date>
+						</td>
+						<td>
+							<span class="test">тест 1</span>
+						</td>
+						<td>
+							<span class="point is-filled">190 (А)</span>
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<date class="date">28.11.15</date>
+						</td>
+						<td>
+							<span class="test">тест 2</span>
+						</td>
+						<td>
+							<span class="point is-filled">190 (А)</span>
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<date class="date">26.12.15</date>
+						</td>
+						<td>
+							<span class="test">тест 3</span>
+						</td>
+						<td>
+							<span class="point is-filled">190 (А)</span>
+						</td>
+					</tr>
+				</tbody>
+				<tfoot>
+					<tr>
+						<td>
+							<span>Оцінка за степ</span>
+						</td>
+						<td></td>
+						<td>
+							<span class="point is-filled">190 (А)</span>
+						</td>
+					</tr>
+					<tr>
+						<td>Відвідуваність</td>
+						<td></td>
+						<td>
+							<span class="attendance">90%</span>
+						</td>
+					</tr>
+				</tfoot>			</table>
+			<h3 class="title-petty">Успішність за степ 2</h3>
+			<table class="progress-table">
+				<tfoot>
+					<tr>
+						<td>
+							<span>Оцінка за степ</span>
+						</td>
+						<td></td>
+						<td>
+							<span class="point is-filled">190 (А)</span>
+						</td>
+					</tr>
+					<tr>
+						<td>Відвідуваність</td>
+						<td></td>
+						<td>
+							<span class="attendance">90%</span>
+						</td>
+					</tr>
+				</tfoot>
+			</table>
+		</div>
 	</div>
-</footer>
+</div>
+<!-- END out--> 
+//=include partials/footer.html 
 </body>
 </html>
