add adaptive all

--- a/src/additional_classes.html
+++ b/src/additional_classes.html
@@ -16,7 +16,7 @@
 				<div class="accord is-active js-accord">
 					<div class="accord__top js-accord-top">
 						<div class="accord__tabl">
-							<span class="group-name">С3-C4</span>
+							<span class="group-name">С3<span class="group-name__subgroup">-C4</span></span>
 							<span class="time">13:00–13:30</span>
 							<span class="theme">Past Perfect</span>
 						</div>
@@ -75,7 +75,7 @@
 				<div class="accord js-accord">
 					<div class="accord__top js-accord-top">
 						<div class="accord__tabl">
-							<span class="group-name">С3-C4</span>
+							<span class="group-name">С3<span class="group-name__subgroup">-C4</span></span>
 							<span class="time">13:00–13:30</span>
 							<span class="theme">Past Perfect</span>
 						</div>
@@ -134,7 +134,7 @@
 				<div class="accord js-accord">
 					<div class="accord__top js-accord-top">
 						<div class="accord__tabl">
-							<span class="group-name">С3-C4</span>
+							<span class="group-name">С3<span class="group-name__subgroup">-C4</span></span>
 							<span class="time">13:00–13:30</span>
 							<span class="theme">Past Perfect</span>
 						</div>
@@ -193,7 +193,7 @@
 				<div class="accord js-accord">
 					<div class="accord__top js-accord-top">
 						<div class="accord__tabl">
-							<span class="group-name">С3-C4</span>
+							<span class="group-name">С3<span class="group-name__subgroup">-C4</span></span>
 							<span class="time">13:00–13:30</span>
 							<span class="theme">Past Perfect</span>
 						</div>
@@ -252,7 +252,7 @@
 				<div class="accord js-accord">
 					<div class="accord__top js-accord-top">
 						<div class="accord__tabl">
-							<span class="group-name">С3-C4</span>
+							<span class="group-name">С3<span class="group-name__subgroup">-C4</span></span>
 							<span class="time">13:00–13:30</span>
 							<span class="theme">Past Perfect</span>
 						</div>
@@ -311,7 +311,7 @@
 				<div class="accord js-accord">
 					<div class="accord__top js-accord-top">
 						<div class="accord__tabl">
-							<span class="group-name">С3-C4</span>
+							<span class="group-name">С3<span class="group-name__subgroup">-C4</span></span>
 							<span class="time">13:00–13:30</span>
 							<span class="theme">Past Perfect</span>
 						</div>
