--- a/src/teacher_groups.html
+++ b/src/teacher_groups.html
@@ -420,7 +420,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="l-col2">
+					<div class="l-col2 is-mod">
 						<h5 class="title-little">Четвер ‒ Субота</h5>
 						<!-- accord -->
 						<div class="accord js-accord">
@@ -780,7 +780,7 @@
 							</div>
 							<div class="accord__block js-accord-block">
 								<!-- table -->
-								<div class="table is-numb">
+								<div class="table is-appraisal is-numb">
 									<div class="table__row">
 										<div class="table__name"><a href="#">Борис Васюк</a></div>
 										<div class="table__point">
@@ -951,7 +951,7 @@
 								</div>
 							<div class="accord__block js-accord-block">
 								<!-- table -->
-								<div class="table is-numb">
+								<div class="table is-appraisal is-numb">
 									<div class="table__row">
 										<div class="table__name"><a href="#">Борис Васюк</a></div>
 										<div class="table__point">
@@ -1120,7 +1120,7 @@
 								</div>
 							<div class="accord__block js-accord-block">
 								<!-- table -->
-								<div class="table is-numb">
+								<div class="table is-appraisal is-numb">
 									<div class="table__row">
 										<div class="table__name"><a href="#">Борис Васюк</a></div>
 										<div class="table__point">
@@ -1289,7 +1289,7 @@
 								</div>
 							<div class="accord__block js-accord-block">
 								<!-- table -->
-								<div class="table is-numb">
+								<div class="table is-appraisal is-numb">
 									<div class="table__row">
 										<div class="table__name"><a href="#">Борис Васюк</a></div>
 										<div class="table__point">
@@ -1458,7 +1458,7 @@
 								</div>
 							<div class="accord__block js-accord-block">
 								<!-- table -->
-								<div class="table is-numb">
+								<div class="table is-appraisal is-numb">
 									<div class="table__row">
 										<div class="table__name"><a href="#">Борис Васюк</a></div>
 										<div class="table__point">
@@ -1627,7 +1627,7 @@
 								</div>
 							<div class="accord__block js-accord-block">
 								<!-- table -->
-								<div class="table is-numb">
+								<div class="table is-appraisal is-numb">
 									<div class="table__row">
 										<div class="table__name"><a href="#">Борис Васюк</a></div>
 										<div class="table__point">
@@ -1796,7 +1796,7 @@
 								</div>
 							<div class="accord__block js-accord-block">
 								<!-- table -->
-								<div class="table is-numb">
+								<div class="table is-appraisal is-numb">
 									<div class="table__row">
 										<div class="table__name"><a href="#">Борис Васюк</a></div>
 										<div class="table__point">
@@ -1956,7 +1956,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="l-col2">
+					<div class="l-col2 is-mod">
 						<h5 class="title-little">Четвер ‒ Субота</h5>
 						<!-- accord -->
 						<div class="accord js-accord">
@@ -1969,7 +1969,7 @@
 							</div>
 							<div class="accord__block js-accord-block">
 								<!-- table -->
-								<div class="table is-numb">
+								<div class="table is-appraisal is-numb">
 									<div class="table__row">
 										<div class="table__name"><a href="#">Борис Васюк</a></div>
 										<div class="table__point">
@@ -2138,7 +2138,7 @@
 							</div>
 							<div class="accord__block js-accord-block">
 								<!-- table -->
-								<div class="table is-numb">
+								<div class="table is-appraisal is-numb">
 									<div class="table__row">
 										<div class="table__name"><a href="#">Борис Васюк</a></div>
 										<div class="table__point">
@@ -2307,7 +2307,7 @@
 							</div>
 							<div class="accord__block js-accord-block">
 								<!-- table -->
-								<div class="table is-numb">
+								<div class="table is-appraisal is-numb">
 									<div class="table__row">
 										<div class="table__name"><a href="#">Борис Васюк</a></div>
 										<div class="table__point">
@@ -2476,7 +2476,7 @@
 							</div>
 							<div class="accord__block js-accord-block">
 								<!-- table -->
-								<div class="table is-numb">
+								<div class="table is-appraisal is-numb">
 									<div class="table__row">
 										<div class="table__name"><a href="#">Борис Васюк</a></div>
 										<div class="table__point">
@@ -2645,7 +2645,7 @@
 							</div>
 							<div class="accord__block js-accord-block">
 								<!-- table -->
-								<div class="table is-numb">
+								<div class="table is-appraisal is-numb">
 									<div class="table__row">
 										<div class="table__name"><a href="#">Борис Васюк</a></div>
 										<div class="table__point">
@@ -2814,7 +2814,7 @@
 							</div>
 							<div class="accord__block js-accord-block">
 								<!-- table -->
-								<div class="table is-numb">
+								<div class="table is-appraisal is-numb">
 									<div class="table__row">
 										<div class="table__name"><a href="#">Борис Васюк</a></div>
 										<div class="table__point">
