--- a/src/student.html
+++ b/src/student.html
@@ -4,13 +4,142 @@
 <div class="out">
 	//=include partials/sidebar-student.html
 	<!-- rightbar -->
-	<div class="rightbar">
+	<div class="rightbar is-step1 js-rightbar">
 		//=include partials/header_student.html 
 		<!-- l -->
 		<div class="l">
 			<!-- l-col1 -->
 			<div class="l-col1">
-				
+				<!-- tract -->
+				<div class="tract">
+					<div class="tract__name"><span>Підручник</span></div>
+					<div class="tract__right">
+						<a href="#" class="btn btn_bord btn_little">ЧИТАТИ</a>
+					</div>
+				</div>
+				<!-- timesheet -->
+				<div class="timesheet">
+					<div class="timesheet__row">
+						<div class="timesheet__left">
+							<div class="timesheet__title">Розклад твоїх занять</div>
+						</div>
+						<div class="timesheet__right">
+							<a href="#" class="btn btn_bord btn_little">ЗМІНИТИ РОЗКЛАД</a>
+						</div>
+					</div>
+					<div class="timesheet__row">
+						<div class="timesheet__left">
+							<div class="timesheet__wrap">
+								<div class="timesheet__day">ПН</div>
+								<div class="timesheet__time">з 19:00 до 21:30</div>
+							</div>
+							<div class="timesheet__wrap">
+								<div class="timesheet__day">ЧТ</div>
+								<div class="timesheet__time">з 18:00 до 20:30</div>
+							</div>
+						</div>
+						<div class="timesheet__right">
+							<a href="#" class="btn btn_bord btn_little">ПЕРЕНЕСТИ 1 УРОК</a>
+						</div>
+					</div>
+				</div>
+				<!-- accord -->
+				<div class="accord js-accord">
+					<div class="accord__top js-accord-top">
+						<div class="accord__tabl">
+							<span class="theme">Перенесені заняття</span>
+						</div>
+					</div>
+					<div class="accord__block js-accord-block">
+						<div class="postponed">
+							<div class="row">
+								<div class="from">ПН, 12 червня</div>
+								<i class="icon icon-arr-right"></i>
+								<div class="to">СР, 14 червня, 18.00</div>
+								<a href="#" class="cancel">ВІДМІНИТИ</a>
+							</div>
+							<div class="row">
+								<div class="from">ПН, 12 червня</div>
+								<i class="icon icon-arr-right"></i>
+								<div class="to">СР, 14 червня, 18.00</div>
+								<a href="#" class="cancel">ВІДМІНИТИ</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- accord -->
+				<div class="accord js-accord">
+					<div class="accord__top js-accord-top">
+						<div class="accord__tabl">
+							<span class="theme">Консультація (25хв.)</span>
+						</div>
+					</div>
+					<div class="accord__block js-accord-block">
+						<div class="row">
+							<span class="bold">18 листопада, 19:00</span>
+							<a href="#" class="cancel">ВІДМІНИТИ</a>
+						</div>
+						<div class="row">
+							<span>У тебе лишилось ще 2 консультації </span>
+							<a href="#" class="btn btn_bord btn_little">ЗАПИСАТИСЬ</a>
+						</div>
+						<!-- alert -->
+						<div class="alert">
+							<div class="alert__ico">
+								<i class="icon "></i>
+							</div>
+							<div class="alert__wrap">Відмінити консультацію можна не пізніше, ніж за 12 годин до її початку.</div>
+						</div>
+					</div>
+				</div>
+				<!-- accord -->
+				<div class="accord js-accord">
+					<div class="accord__top js-accord-top">
+						<div class="accord__tabl">
+							<span class="theme">Додаткові заняття</span>
+						</div>
+					</div>
+					<div class="accord__block js-accord-block">
+						<div class="item">
+							<div class="row">
+								<span class="bold">СР, 14 червня, 18.00–19.00</span>
+								<div class="status">Йду</div>
+							</div>
+							<div class="row">
+								<span>Present perfect and present continuous</span>
+								<a href="#" class="cancel">ВІДМІНИТИ</a>
+							</div>
+						</div>
+						<div class="item">
+							<div class="row">
+								<span class="bold">СР, 14 червня, 18.00–19.00</span>
+								<div class="status">Йду</div>
+							</div>
+							<div class="row">
+								<span>Present perfect and present continuous</span>
+							</div>
+						</div>
+						<div class="item">
+							<div class="row">
+								<span class="bold">СР, 14 червня, 18.00–19.00</span>
+							</div>
+							<div class="row">
+								<span>Present perfect and present continuous</span>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- accord -->
+				<div class="accord js-accord">
+					<div class="accord__top js-accord-top">
+						<div class="accord__tabl">
+							<span class="theme">Пропущені заняття</span>
+						</div>
+					</div>
+					<div class="accord__block js-accord-block">
+						Lorem ipsum dolor sit amet.
+					</div>
+				</div>
 			</div>
 			<!-- l-col2 -->
 			<div class="l-col2">
