--- a/src/student.html
+++ b/src/student.html
@@ -298,7 +298,9 @@
 					</table>
 				</div>
 				<!-- tile -->
-				<div class="tile"></div>
+				<div class="tile">
+					<div class="thisban"></div>
+				</div>
 			</div>
 		</div>
 	</div>
