--- a/src/authorization-popup-error.html
+++ b/src/authorization-popup-error.html
@@ -1,5 +1,5 @@
 //=include partials/head.html  
-<body class="is-home">
+<body class="is-home is-hidden">
 <!-- paralax -->
 //=include partials/paralax.html
 <!-- BEGIN  out-->
