--- a/src/choose_the_schedule_for_the_next_step_pop_2.html
+++ b/src/choose_the_schedule_for_the_next_step_pop_2.html
@@ -1,18 +1,6 @@
-<!doctype html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<title>Template</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="format-detection" content="telephone=no">
-	<meta name="theme-color" content="#fff">
-	<link rel="stylesheet" media="all" href="css/style.css" >
-	<link rel="stylesheet" media="all" href="css/jquery-ui.min.css" >
-	<script src="js/app.js"></script>
-	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3"></script>
-</head>
-<body class="is-student">
-<!-- BEGIN  out--> 
+//=include partials/head.html 
+<body class="is-student is-hidden">
+<!-- BEGIN  out-->
 <div class="out">
 	<!-- sidebar -->
 	<div class="sidebar js-sidebar">
@@ -21,11 +9,11 @@
 		<!-- numb-step -->
 		<div class="numb-step">
 			<div class="numb-step__text">степ</div>
-			<div class="numb-step__item">3</div>
+			<div class="numb-step__item">1</div>
 		</div>
 	</div>
 	<!-- rightbar -->
-	<div class="rightbar is-step3 js-rightbar">
+	<div class="rightbar is-step1 js-rightbar">
 		<!-- header -->
 		<header class="header js-header">
 			<div class="header__bg js-header-bg" style="background-image: url('/img/header_bg.png')"></div>
@@ -51,10 +39,10 @@
 				<div class="header__row">
 					<!-- strides -->
 					<div class="strides">
-						<div class="step">
+						<div class="step is-active">
 							<date class="date">з 5.06.15 по 5.09.15</date>
 							<div class="progress">
-								<div class="progress__in" style="width:100%;"></div>
+								<div class="progress__in" style="width:35%;"></div>
 							</div>
 							<div class="step__bot">
 								<span>Степ 1</span> 
@@ -64,17 +52,17 @@
 						<div class="step">
 							<date class="date">з 5.06.15 по 5.09.15</date>
 							<div class="progress">
-								<div class="progress__in" style="width:100%;"></div>
+								<div class="progress__in" style="width:0;"></div>
 							</div>
 							<div class="step__bot">
 								<span>Степ 2</span> 
 								<span class="step__stat">(зараз)</span>
 							</div>
 						</div>
-						<div class="step is-active">
+						<div class="step">
 							<date class="date">з 5.06.15 по 5.09.15</date>
 							<div class="progress">
-								<div class="progress__in" style="width:35%;"></div>
+								<div class="progress__in" style="width:0;"></div>
 							</div>
 							<div class="step__bot">
 								<span>Степ 3</span> 
@@ -92,18 +80,6 @@
 							</div>
 						</div>
 					</div>
-				</div>
-				<div class="header__icons">
-					<a href="#" class="step-ico">
-						<div class="icon">
-							<img src="img/svg/step-icon1.svg" alt="img">
-						</div>
-					</a>
-					<a href="#" class="step-ico">
-						<div class="icon">
-							<img src="img/svg/step-icon2.svg" alt="img">
-						</div>
-					</a>
 				</div>
 			</div>
 		</header>
@@ -126,6 +102,95 @@
 						</div>
 						<div class="timesheet__right">
 							<a href="#" class="btn btn_bord btn_little">ЗМІНИТИ РОЗКЛАД</a>
+							<!-- popup -->
+							<div class="popup js-popup is-active">
+								<div class="popup__in">
+									<button class="popup__close js-popup-close"><i class="icon icon-close"></i></button>
+									<div class="plan js-plan">
+										<form action="">
+											<div class="title-medium">Обрати розклад на 3 степ</div>
+											<div class="plan__wrap">
+												<div class="plan__left">
+													<div class="title-bord">1 заняття (ПН-СР)</div>
+													<ul class="plan__days">
+														<li class="is-active"><a href="#">ПН</a></li>
+														<li><a href="#">вт</a></li>
+														<li><a href="#">ср</a></li>
+													</ul>
+												</div>
+												<div class="plan__right">
+													<div class="title-bord">2 заняття (ЧТ-СБ)</div>
+													<ul class="plan__days">
+														<li><a href="#">чт</a></li>
+														<li class="is-active"><a href="#">пт</a></li>
+														<li><a href="#">сб</a></li>
+													</ul>
+												</div>
+											</div>
+											<div class="plan__block is-active">
+												<div class="plan__left">
+													<label class="radiobutton">
+														<input type="radio" name="first">
+														<span>ПН, 10.00–12.00</span>
+														<span class="radiobutton__text">Лишилось 4 місця</span>
+													</label>
+													<label class="radiobutton">
+														<input type="radio" name="first">
+														<span>ПН, 16.00–17.00</span>
+														<span class="radiobutton__text">Лишилось 4 місця</span>
+													</label>
+													<label class="radiobutton">
+														<input type="radio" name="first">
+														<span>ВТ, 11.30–12.30</span>
+														<span class="radiobutton__text">Лишилось 4 місця</span>
+													</label>
+													<label class="radiobutton">
+														<input type="radio" name="first">
+														<span>ВТ, 17.00–18.00</span>
+														<span class="radiobutton__text">Лишилось 4 місця</span>
+													</label>
+													<label class="radiobutton">
+														<input type="radio" name="first">
+														<span>СР, 18.00–19.00</span>
+														<span class="radiobutton__text">Лишилось 4 місця</span>
+													</label>
+													<label class="radiobutton">
+														<input type="radio" name="first">
+														<span>СР, 19.00–20.00</span>
+														<span class="radiobutton__text">Лишилось 4 місця</span>
+													</label>
+												</div>
+												<div class="plan__right">
+													<label class="radiobutton">
+														<input type="radio" name="second">
+														<span>ЧТ, 10.00–11.00</span>
+														<span class="radiobutton__text">Лишилось 4 місця</span>
+													</label>
+													<label class="radiobutton">
+														<input type="radio" name="second">
+														<span>ПТ, 11.00–12.00</span>
+														<span class="radiobutton__text">Лишилось 4 місця</span>
+													</label>
+													<label class="radiobutton">
+														<input type="radio" name="second">
+														<span>ПТ, 18.00–19.00</span>
+														<span class="radiobutton__text">Лишилось 4 місця</span>
+													</label>
+													<label class="radiobutton">
+														<input type="radio" name="second">
+														<span>СБ, 10.00–11.00</span>
+														<span class="radiobutton__text">Лишилось 4 місця</span>
+													</label>
+												</div>
+											</div>
+											<div class="plan__butt">
+												<button class="btn btn_bord js-plan-submit" type="submit">ГОТОВО</button>
+												<button class="cancel js-plan-cancel" type="button">ВІДМІНИТИ</button>
+											</div>
+										</form>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 					<div class="timesheet__row">
@@ -268,11 +333,11 @@
 			<!-- l-col2 -->
 			<div class="l-col2">
 				<!-- appraisal -->
-				<div class="appraisal js-appraisal">
+				<div class="appraisal">
 					<table class="progress-table">
 						<thead>
 							<tr>
-								<th colspan="3">Успiшнiсть за степ 3</th>
+								<th colspan="3">Успiшнiсть за степ 1</th>
 							</tr>
 						</thead>
 						<tbody>
@@ -312,41 +377,14 @@
 						</tbody>
 						<tfoot>
 							<tr>
-								<td colspan="2">Відвідуваність</td>
+								<td>Відвідуваність</td>
+								<td></td>
 								<td>
 									<span class="attendance">90%</span>
 								</td>
 							</tr>
-							<tr>
-								<td colspan="3">
-									<a href="#" class="btn btn_bord btn_little btn_color js-open-success">УСПІШНІСТЬ ЗА ПОПЕРЕДНІЙ СТЕП</a>
-								</td>
-							</tr>
 						</tfoot>
 					</table>
-					<div class="appraisal__item js-appraisal-item">
-						<table class="progress-table">
-							<thead>
-								<tr>
-									<th colspan="3">Успiшнiсть за степ 2</th>
-								</tr>
-							</thead>
-							<tfoot>
-								<tr>
-									<td colspan="2">Оцінка за степ</td>
-									<td>
-										<span class="point is-filled">190 (A)</span>
-									</td>
-								</tr>
-								<tr>
-									<td colspan="2">Відвідуваність</td>
-									<td>
-										<span class="attendance">90%</span>
-									</td>
-								</tr>
-							</tfoot>
-						</table>
-					</div>
 				</div>
 				<!-- tile -->
 				<div class="tile">
@@ -357,17 +395,6 @@
 	</div>
 </div>
 <!-- END out--> 
-<!-- footer -->
-<footer class="footer">
-	<div class="footer__in">
-		<!-- dev -->
-		<div class="dev">
-			<p>Дизайнер — Марта Гожа</p>
-			<p>Разработка —  UaMaster</p>
-		</div>
-		<!-- copy -->
-		<div class="copy">&copy; Project 12</div>
-	</div>
-</footer>
+//=include partials/footer.html 
 </body>
 </html>
