--- a/src/student_step4_2.html
+++ b/src/student_step4_2.html
@@ -1,16 +1,4 @@
-<!doctype html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<title>Template</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="format-detection" content="telephone=no">
-	<meta name="theme-color" content="#fff">
-	<link rel="stylesheet" media="all" href="css/style.css" >
-	<link rel="stylesheet" media="all" href="css/jquery-ui.min.css" >
-	<script src="js/app.js"></script>
-	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3"></script>
-</head>
+//=include partials/head.html 
 <body class="is-student">
 <!-- BEGIN  out--> 
 <div class="out">
@@ -21,11 +9,11 @@
 		<!-- numb-step -->
 		<div class="numb-step">
 			<div class="numb-step__text">степ</div>
-			<div class="numb-step__item">3</div>
+			<div class="numb-step__item">4</div>
 		</div>
 	</div>
 	<!-- rightbar -->
-	<div class="rightbar is-step3 js-rightbar">
+	<div class="rightbar is-step4 js-rightbar">
 		<!-- header -->
 		<header class="header js-header">
 			<div class="header__bg js-header-bg" style="background-image: url('/img/header_bg.png')"></div>
@@ -71,20 +59,20 @@
 								<span class="step__stat">(зараз)</span>
 							</div>
 						</div>
-						<div class="step is-active">
+						<div class="step">
 							<date class="date">з 5.06.15 по 5.09.15</date>
 							<div class="progress">
-								<div class="progress__in" style="width:35%;"></div>
+								<div class="progress__in" style="width:100%;"></div>
 							</div>
 							<div class="step__bot">
 								<span>Степ 3</span> 
 								<span class="step__stat">(зараз)</span>
 							</div>
 						</div>
-						<div class="step">
+						<div class="step is-active">
 							<date class="date">з 5.06.15 по 5.09.15</date>
 							<div class="progress">
-								<div class="progress__in" style="width:0;"></div>
+								<div class="progress__in" style="width:35%;"></div>
 							</div>
 							<div class="step__bot">
 								<span>Степ 4</span> 
@@ -102,6 +90,16 @@
 					<a href="#" class="step-ico">
 						<div class="icon">
 							<img src="img/svg/step-icon2.svg" alt="img">
+						</div>
+					</a>
+					<a href="#" class="step-ico">
+						<div class="icon">
+							<img src="img/svg/step-icon3.svg" alt="img">
+						</div>
+					</a>
+					<a href="#" class="step-ico">
+						<div class="icon">
+							<img src="img/svg/step-icon4.svg" alt="img">
 						</div>
 					</a>
 				</div>
@@ -272,7 +270,7 @@
 					<table class="progress-table">
 						<thead>
 							<tr>
-								<th colspan="3">Успiшнiсть за степ 3</th>
+								<th colspan="3">Успiшнiсть за степ 4</th>
 							</tr>
 						</thead>
 						<tbody>
@@ -328,7 +326,7 @@
 						<table class="progress-table">
 							<thead>
 								<tr>
-									<th colspan="3">Успiшнiсть за степ 2</th>
+									<th colspan="3">Успiшнiсть за степ 3</th>
 								</tr>
 							</thead>
 							<tfoot>
@@ -348,6 +346,12 @@
 						</table>
 					</div>
 				</div>
+				<!-- set -->
+				<div class="set">
+					<h4 class="title-petty">Триває набір на 3 степ!</h4>
+					<p>Навчання з 14.09.15 до 14.01.16</p>
+					<a href="#" class="btn btn_bord btn_yellow-all">ЗАРЕЄСТРУВАТИСЬ</a>
+				</div>
 				<!-- tile -->
 				<div class="tile">
 					<div class="thisban"></div>
@@ -357,17 +361,6 @@
 	</div>
 </div>
 <!-- END out--> 
-<!-- footer -->
-<footer class="footer">
-	<div class="footer__in">
-		<!-- dev -->
-		<div class="dev">
-			<p>Дизайнер — Марта Гожа</p>
-			<p>Разработка —  UaMaster</p>
-		</div>
-		<!-- copy -->
-		<div class="copy">&copy; Project 12</div>
-	</div>
-</footer>
+//=include partials/footer.html 
 </body>
 </html>
